--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Deploy Todo API
+name: Deploy website to EC2
 
 on:
   push:
@@ -9,26 +9,22 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
 
+
     steps:
     - name: Checkout code
-      uses: actions/checkout@v2
+      uses: actions/checkout@v3
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
 
     - name: Build and push Docker image
       run: |
-        docker build -t abudev22/todo .
-        docker push abudev22/todo:latest
+        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops .
+        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
 
-    - name: Configure AWS credentials
-      uses: aws-actions/configure-aws-credentials@v1
-      with:
-        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        aws-region: us-east-2
-
-    - name: Configure SSH
-      uses: webfactory/ssh-agent@v0.7.0
-      with:
-        ssh-private-key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
 
     - name: Deploy to EC2 instance
       uses: appleboy/ssh-action@master
@@ -37,8 +33,7 @@ jobs:
         username: ${{ secrets.EC2_USERNAME }}
         key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
         script: |
-          docker pull abudev22/todo:latest
-          docker stop my-todo || true
-          docker rm my-todo || true
-          docker run -d --name my-todo -p 8000:8080 abudev22/todo:latest
-          
+          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
+          docker stop my-website  true
+          docker rm my-website  true
+          docker run -d --name my-website -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
