--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,40 +1,40 @@
-name: Deploy website to EC2
+# name: Deploy website to EC2
 
-on:
+# on:
   push:
     branches:
       - main
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+  # deploy:
+    # runs-on: ubuntu-latest
+
+# 
+    # steps:
+    # - name: Checkout code
+      # uses: actions/checkout@v3
+
+    # - name: Login to Docker Hub
+      # uses: docker/login-action@v3
+      # with:
+        # username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        # password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+
+    # - name: Build and push Docker image
+      # run: |
+        # docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops .
+        # docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
 
 
-    steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
-
-    - name: Login to Docker Hub
-      uses: docker/login-action@v3
-      with:
-        username: ${{ secrets.DOCKER_HUB_USERNAME }}
-        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
-
-    - name: Build and push Docker image
-      run: |
-        docker build -t ${{ secrets.DOCKER_HUB_USERNAME }}/devops .
-        docker push ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
-
-
-    - name: Deploy to EC2 instance
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EC2_PUBLIC_IP }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
-        script: |
-          docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
-          docker stop my-website  true
-          docker rm my-website  true
-          docker run -d --name my-website -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
-          
+    # - name: Deploy to EC2 instance
+      # uses: appleboy/ssh-action@master
+      # with:
+        # host: ${{ secrets.EC2_PUBLIC_IP }}
+        # username: ${{ secrets.EC2_USERNAME }}
+        # key: ${{ secrets.EC2_SSH_PRIVATE_KEY }}
+        # script: |
+          # docker pull ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
+          # docker stop my-website  true
+          # docker rm my-website  true
+          # docker run -d --name my-website -p 8000:8000 ${{ secrets.DOCKER_HUB_USERNAME }}/devops:latest
+          # 
